--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "todolist-v1",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "engines": {
     "node": "16.15.1"
@@ -17,5 +17,7 @@
     "express": "^4.16.3",
     "lodash": "^4.17.21",
     "mongoose": "^6.4.3"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
